--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"glob": "^10.3.10",
 		"html-minifier-terser": "^7.2.0",
 		"lodash-es": "^4.17.21",
+		"node-fetch-retry": "^2.0.1",
 		"prettier": "^3.0.3"
 	}
 }
