--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"devDependencies": {
 		"glob": "^10.3.10",
 		"html-minifier-terser": "^7.2.0",
+		"jsesc": "^3.0.2",
 		"lodash-es": "^4.17.21",
 		"node-fetch-retry": "^2.0.1",
 		"prettier": "^3.0.3"
