Remove “Madroox” from character blocklist
It looks like the character no longer exists.

--- a/.github/workflows/check-blocklist.yml
+++ b/.github/workflows/check-blocklist.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  update-data:
+  check-blocklist:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
